content/docs/v2020.10.30/reference/google.kubeform.com/ComputeRouterPeer.md
---
title: ComputeRouterPeer
menu:
  docs_v2020.10.30:
    identifier: computerouterpeer-google.kubeform.com
    name: ComputeRouterPeer
    parent: google.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## ComputeRouterPeer
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `google.kubeform.com/v1alpha1` |
|    `kind` | string | `ComputeRouterPeer` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[ComputeRouterPeerSpec](#computerouterpeerspec)***||
| `status` | ***[ComputeRouterPeerStatus](#computerouterpeerstatus)***||
## ComputeRouterPeerSpec

Appears on:[ComputeRouterPeer](#computerouterpeer), [ComputeRouterPeerStatus](#computerouterpeerstatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `advertiseMode` | ***string***| ***(Optional)*** |
| `advertisedGroups` | ***[]string***| ***(Optional)*** |
| `advertisedIPRanges` | ***[[]ComputeRouterPeerSpecAdvertisedIPRanges](#computerouterpeerspecadvertisedipranges)***| ***(Optional)*** |
| `advertisedRoutePriority` | ***int64***| ***(Optional)*** |
| `interface` | ***string***||
| `ipAddress` | ***string***| ***(Optional)*** |
| `name` | ***string***||
| `peerAsn` | ***int64***||
| `peerIPAddress` | ***string***| ***(Optional)*** |
| `project` | ***string***| ***(Optional)*** |
| `region` | ***string***| ***(Optional)*** |
| `router` | ***string***||
## ComputeRouterPeerSpecAdvertisedIPRanges

Appears on:[ComputeRouterPeerSpec](#computerouterpeerspec)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `description` | ***string***| ***(Optional)*** |
| `range` | ***string***| ***(Optional)*** |
## ComputeRouterPeerStatus

Appears on:[ComputeRouterPeer](#computerouterpeer)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[ComputeRouterPeerSpec](#computerouterpeerspec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[ComputeRouterPeerStatus](#computerouterpeerstatus)

---
